salesforce/assignment/force-app/main/default/objects/surveyReport__c/surveyReport__c.object-meta.xml
<CustomObject>
    <label>surveyReport</label>
    <nameField>
        <label>surveyReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>surveyReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>