salesforce/assignment/force-app/main/default/objects/surveyReport__c/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>surveyReports</relationshipLabel>
    <relationshipName>surveyReports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>