salesforce/assignment/force-app/main/default/objects/surveyReport__c/fields/survey_fquestion__c.field-meta.xml
<CustomField>
    <fullName>survey_fquestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>survey fquestion</label>
    <referenceTo>survey_fquestion__c</referenceTo>
    <relationshipLabel>surveyReports</relationshipLabel>
    <relationshipName>surveyReports</relationshipName>
    <type>Lookup</type>
</CustomField>