salesforce/assignment/force-app/main/default/objects/surveyReport__c/fields/survey_question__c.field-meta.xml
<CustomField>
    <fullName>survey_question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>survey question</label>
    <referenceTo>survey_question__c</referenceTo>
    <relationshipLabel>surveyReports</relationshipLabel>
    <relationshipName>surveyReports</relationshipName>
    <type>Lookup</type>
</CustomField>