salesforce/assignment/force-app/main/default/objects/surveyReport__c/fields/survey_response__c.field-meta.xml
<CustomField>
    <fullName>survey_response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>survey response</label>
    <referenceTo>survey_response__c</referenceTo>
    <relationshipLabel>surveyReports</relationshipLabel>
    <relationshipName>surveyReports</relationshipName>
    <type>Lookup</type>
</CustomField>